--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,18 @@ services:
     volumes:
       - /Users/bernal/Documents/ext/docker_pers/elasticsearch:/data
 
+  postgresql:
+    image: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - /Users/bernal/Documents/ext/docker_pers/postgresql:/var/lib/postgresql/data
+  #> psql -U postgres -d postgres
+  #> CREATE USER <user>
+  #> CREATE DATABASE <db>
+  #> GRANT CONNECT ON DATABASE <db> TO <user>;
+  #> GRANT ALL PRIVILEGES ON DATABASE <db> TO <user>;
+
   cassandra:
     image: cassandra
     ports:
